beginning mobile-first styling

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,19 +2,20 @@
 
 nav {
     display: flex;
-    padding-top: 30px;
+    padding-top: 2.5%;
     width: 100%;
-    justify-content: center;
+    flex-direction: column;
 
 a {
     display: flex;
-	margin: 0 5%;
+    justify-content: center;
+    margin: 2.5% 0;
     color: black;
     font-size: 1.5rem;
+    transition: all 0.3s ease-in; 
     &:hover {
-        color: red;
-        transition: (all, 0.3s, ease-in); 
-    
+    color: red;
+        
         }
     }
 }
