--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,12 +1,59 @@
-.header-contents h1 {
-display: flex;    
-font-size: 3.8rem;
-justify-content: center;
+.container {
+    background-color: @brand-tan;
 }
 
-.banner {
-padding-top: 2.5%;    
-display: flex;
-height: 200px;
-width: 100%;
+.header-contents {
+    h1 {
+        display: flex;    
+        font-size: 3.8rem;
+        justify-content: center;
+        }
 }
+
+
+
+.intro {
+    .banner {
+        padding-top: 2.5%;    
+        display: flex;
+        height: 200px;
+        width: 100%;
+        }
+    h2 {
+        display: flex;    
+        padding-top: 5%;    
+        justify-content: center;
+        }
+}
+
+.programs {
+  
+    .programs-image {
+        display: flex;    
+        padding-top: 5%;    
+        align-items: center;
+        }
+    
+    h3 {
+        display: flex;    
+        padding-top: 5%;    
+        justify-content: center; 
+        }
+}
+
+.get-involved {
+    h3 {
+        display: flex;    
+        padding-top: 5%;    
+        justify-content: center; 
+        }
+}
+
+.donate {
+    h3 {
+        display: flex;    
+        padding-top: 5%;    
+        justify-content: center; 
+        }
+}
+
