--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,11 +10,11 @@ a {
     display: flex;
     justify-content: center;
     margin: 2.5% 0;
-    color: black;
+    color: @brand-black;
     font-size: 1.5rem;
     transition: all 0.3s ease-in; 
     &:hover {
-    color: red;
+    color: @brand-red;
         
         }
     }
