--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,59 +1,68 @@
 .container {
     background-color: @brand-tan;
-}
 
-.header-contents {
-    h1 {
-        display: flex;    
-        font-size: 3.8rem;
-        justify-content: center;
+    .header-contents {
+
+        h1 {
+            display: flex;
+            font-size: 3.8rem;
+            justify-content: center;
         }
-}
+    }
 
+    .intro {
+        .banner {
+            display: flex;
+            height: 200px;
+            width: 100%;
+        }
 
+        h2 {
+            display: flex;
+            padding-top: 5%;
+            justify-content: center;
+        }
+    }
 
-.intro {
-    .banner {
-        padding-top: 2.5%;    
+    .programs {
         display: flex;
-        height: 200px;
-        width: 100%;
-        }
-    h2 {
-        display: flex;    
-        padding-top: 5%;    
-        justify-content: center;
-        }
-}
-
-.programs {
-  
-    .programs-image {
-        display: flex;    
-        padding-top: 5%;    
+        flex-direction: column;
         align-items: center;
-        }
     
-    h3 {
-        display: flex;    
-        padding-top: 5%;    
-        justify-content: center; 
+        .programs-image {
+            display: flex;
+            padding-top: 5%;
+            justify-content: center;
         }
-}
 
-.get-involved {
-    h3 {
-        display: flex;    
-        padding-top: 5%;    
-        justify-content: center; 
+        h3 {
+            display: flex;
+            padding-top: 5%;
+            justify-content: center;
         }
-}
+    }
 
-.donate {
-    h3 {
-        display: flex;    
-        padding-top: 5%;    
-        justify-content: center; 
+    .get-involved {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    
+        h3 {
+            display: flex;
+            padding-top: 5%;
+            justify-content: center;
         }
-}
+    }
 
+    .donate {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        h3 {
+            display: flex;
+            padding-top: 5%;
+            justify-content: center;
+        }
+    }
+}
