--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,21 +1,32 @@
-// Navigation
-
-nav {
-    display: flex;
-    padding-top: 2.5%;
-    width: 100%;
-    flex-direction: column;
-
-a {
-    display: flex;
-    justify-content: center;
-    margin: 2.5% 0;
-    color: @brand-black;
-    font-size: 1.5rem;
-    transition: all 0.3s ease-in; 
-    &:hover {
-    color: @brand-red;
+// Navigation/header 
+header {
+    background-color: @brand-grey;
+    padding-bottom: 2.5%;
+    h1 {
+        display: flex;
+        font-size: 3.6rem;
+        justify-content: center;
         
+
+    }
+    
+    nav {
+        display: flex;
+        padding-top: 2.5%;
+        width: 100%;
+        flex-direction: column;
+    
+    a {
+        display: flex;
+        justify-content: center;
+        margin: 2.5% 0;
+        color: @brand-black;
+        font-size: 1.5rem;
+        transition: all 0.3s ease-in; 
+        &:hover {
+        color: @brand-red;
+            
+            }
         }
     }
 }
