--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,7 +5,7 @@
 
         h1 {
             display: flex;
-            font-size: 3.8rem;
+          
             justify-content: center;
         }
     }
@@ -21,6 +21,10 @@
             display: flex;
             padding-top: 5%;
             justify-content: center;
+        }
+
+        p {
+        margin: 0 5%;    
         }
     }
 
@@ -40,6 +44,10 @@
             padding-top: 5%;
             justify-content: center;
         }
+
+        p {
+            margin: 0 5%;    
+            }
     }
 
     .get-involved {
@@ -52,6 +60,10 @@
             padding-top: 5%;
             justify-content: center;
         }
+
+        p {
+            margin: 0 5%;    
+            }
     }
 
     .donate {
@@ -64,5 +76,9 @@
             padding-top: 5%;
             justify-content: center;
         }
+
+        p {
+            margin: 0 5%;    
+            }
     }
 }
