--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,30 +3,54 @@ header {
     background-color: @brand-grey;
     padding-bottom: 2.5%;
 
-    h1 {
+    @media @desktop {
         display: flex;
-        font-size: 4rem;
         justify-content: center;
-        
-
+        border-bottom: 5px solid @brand-red;
+        padding-bottom: 0;
     }
-    
-    nav {
-        display: flex;
-        padding-top: 2.5%;
-        width: 100%;
-        flex-direction: column;
-    
-    a {
-        display: flex;
-        justify-content: center;
-        margin: 2.5% 0;
-        color: @brand-black;
-        font-size: 1.5rem;
-        transition: all 0.3s ease-in; 
-        &:hover {
-        color: @brand-red;
-            
+
+    .header-contents {
+        @media @desktop {
+           display: flex;
+           border: 3px solid green;
+
+        }
+
+
+        h1 {
+            display: flex;
+            font-size: 4rem;
+            justify-content: center;
+
+            @media @desktop {
+                border: 3px solid black;
+            }
+        }
+
+        nav {
+            display: flex;
+            padding-top: 2.5%;
+            width: 100%;
+            flex-direction: column;
+
+            @media @desktop {
+                flex-direction: row;
+                border: 3px solid purple;
+            }
+
+            a {
+                display: flex;
+                justify-content: center;
+                margin: 2.5% 0;
+                color: @brand-black;
+                font-size: 1.5rem;
+                transition: all 0.3s ease-in;
+
+                &:hover {
+                    color: @brand-red;
+                }
+
             }
         }
     }
