--- a/less/footer.less
+++ b/less/footer.less
@@ -4,7 +4,7 @@ footer {
     justify-content: center;
 
     @media @desktop {
-        border:5px solid purple;
+        border-top: 3px solid @brand-red;
     }
 
 }
