carousel complete, images cropped and resized

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,13 +11,70 @@
     }
 
     .intro {
+        .carousel {
+            display: flex;
+            height: 200px;
+            width: 100%;
+            position: relative;
+           
+            @media @desktop {
+                height: 350px;
+            }
+          }
+          
+          .slides {
+            height: 100%;
+            width: 100%;
+            position: relative;
+          }
+          
+          .slide {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+            font-size: 3em;
+            color: white;
+            line-height: 400px;
+            text-align: center;
+            opacity: 0;
+            transition: opacity 1000ms;
+          }
+          
+          .slide:nth-child(1) {
+              opacity: 1;
+          }
+          
+        //   .slide:nth-child(2) {
+              
+        //   }
+          
+        //   .slide:nth-child(3) {
+             
+        //   }
+          
+          .slide[data-state=active] {
+            display: block;
+          }
+          
+          .indicators {
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+          }
+          
+          .indicator {
+              cursor: pointer;
+          }
+
         .banner {
             display: flex;
             height: 200px;
             width: 100%;
 
             @media @desktop {
-                height: 300px;
+                height: 350px;
             }
         }
 
