--- a/css/index.css
+++ b/css/index.css
@@ -224,6 +224,49 @@ header .header-contents nav a:hover {
   display: flex;
   justify-content: center;
 }
+.container .intro .carousel {
+  display: flex;
+  height: 200px;
+  width: 100%;
+  position: relative;
+}
+@media (min-width: 500px) {
+  .container .intro .carousel {
+    height: 350px;
+  }
+}
+.container .intro .slides {
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+.container .intro .slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  font-size: 3em;
+  color: white;
+  line-height: 400px;
+  text-align: center;
+  opacity: 0;
+  transition: opacity 1000ms;
+}
+.container .intro .slide:nth-child(1) {
+  opacity: 1;
+}
+.container .intro .slide[data-state=active] {
+  display: block;
+}
+.container .intro .indicators {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+.container .intro .indicator {
+  cursor: pointer;
+}
 .container .intro .banner {
   display: flex;
   height: 200px;
@@ -231,7 +274,7 @@ header .header-contents nav a:hover {
 }
 @media (min-width: 500px) {
   .container .intro .banner {
-    height: 300px;
+    height: 350px;
   }
 }
 .container .intro h2 {
