--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,7 +6,7 @@ header {
     @media @desktop {
         display: flex;
         justify-content: center;
-        border-bottom: 3px solid @brand-red;
+        border-bottom: 2px solid @brand-red;
         padding-bottom: 0;
     }
 
@@ -22,7 +22,7 @@ header {
             justify-content: center;
 
             @media @desktop {
-                margin: 0 0 0 3%;
+                margin: 0 -7% 0 5%;
             }
         }
 
